--- a/templates/superheroRace.html
+++ b/templates/superheroRace.html
@@ -10,15 +10,16 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <title>Predict Hero History</title>
+    <title>Predict Hero Race</title>
     <style>
         body {
-            background-color: #552681;
+            background: url("/static/img/superheroes.jpg") center center no-repeat;
+            background-size: 100rem;
             margin: 0;
             font-size: .9rem;
             font-weight: 400;
             line-height: 1.6;
-            color: #212529;
+            color: #273039;
             text-align: left;
         }
 
@@ -36,18 +37,19 @@
 <body>
 
 <div class="login-form mt-5">
-    <div class="container mb-4">
+    <div class="mb-4">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header" style="font-size: 1rem"><strong>Detect Spam</strong></div>
+                <div class="card" style="background-color: #cfcfcf">
+                    <div class="card-header" style="font-size: 1rem"><strong>Get Superheroes' Race</strong></div>
                     <div class="card-body">
                         <form action="/" method="POST">
                             <div class="form-group row">
                                 <label for="email_address"
                                        class="col-md-4 col-form-label text-md-right">Hero History</label>
                                 <div class="col-md-6">
-                                    <input type="text" id="email_address" class="form-control" name="history_text" required
+                                    <input type="text" id="email_address" class="form-control" name="history_text"
+                                           required
                                            autofocus>
                                 </div>
                             </div>
@@ -61,11 +63,11 @@
         </div>
     </div>
     <div class="container col-md-3 mt-5">
-        <div class="row justify-content-center" style="background-color: azure;border-radius: 4px">
+        <div class="row justify-content-center" style="background-color: #cfcfcf;border-radius: 4px">
             {% if size %}
-                <div class="p-3">
-                    <h4>{{ race }}</h4>
-                </div>
+            <div class="p-3">
+                <h4>{{ race }}</h4>
+            </div>
             {% endif %}
         </div>
     </div>
